--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -14,7 +14,39 @@
     <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
   </header>
   <main>
-    <!-- Student code goes here -->
+    <section class="card" id="html-section">
+      <h2>HTML</h2>
+      <ul>
+        <li>The head element contains information about the webpage.</li>
+        <li>The body element represents the visible content shown to the user</li>
+        <li> unordered lists are used to display list items in bullet proof format</li>
+        <li>html is the standard language for web development</li>
+
+      </ul>
+    </section>
+ 
+    <section class="card" id="css-section">
+      <h2>CSS</h2>
+      <ul>
+        <li>Enter your CSS notes here</li>
+      </ul>
+      
+    </section>
+ 
+    <section class="card" id="git-section">
+      <h2>Git</h2>
+      <ul>
+        <li>git status: checks what branch we are currently in</li>
+        <li>git checkout -b bracnh-name: creates a new branch and switches to it</li>
+      </ul>
+    </section>
+ 
+    <section class="card" id="javascript-section">
+      <h2>JavaScript</h2>
+      <ul>
+        <li>Enter your JavaScript notes here</li>
+      </ul>
+    </section>
   </main>
 
   <footer>
