--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <header id="top">
     <h1>Prework Study Guide</h1>
-    <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    <h2>✨ Open the Console to See What's Happening ✨</h2>
+    <img src="./prework-study-guide/assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
   </header>
   <main>
     <section class="card" id="html-section">
@@ -26,15 +25,15 @@
 
       </ul>
     </section>
-
+ 
     <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
         <li>Enter your CSS notes here</li>
       </ul>
-
+      
     </section>
-
+ 
     <section class="card" id="git-section">
       <h2>Git</h2>
       <ul>
@@ -42,7 +41,7 @@
         <li>git checkout -b bracnh-name: creates a new branch and switches to it</li>
       </ul>
     </section>
-
+ 
     <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
       <ul>
@@ -54,7 +53,6 @@
   <footer>
     <p>I can code!</p>
   </footer>
-  <script src="./assets/script.js"></script>
 </body>
 
 </html>
