--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -38,6 +38,7 @@
     <section class="card" id="git-section">
       <h2>Git</h2>
       <ul>
+        <li>git pull origin main merges changes from the remote </li>
         <li>git status: checks what branch we are currently in</li>
         <li>git checkout -b bracnh-name: creates a new branch and switches to it</li>
       </ul>
@@ -46,7 +47,11 @@
     <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
       <ul>
-        <li>Enter your JavaScript notes here</li>
+        <li>in JavaScript you assign values to variables and use for loops to iterate through them</li>
+        <li>JavaScript is what you use to print to the console</li>
+        <li>JavaScript is used to interact with a user</li>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
       </ul>
     </section>
   </main>
