--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -30,7 +30,9 @@
     <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
-        <li>Enter your CSS notes here</li>
+        <li>CSS is used to change the appearances of text and other media</li>
+        <li>You can add animations with CSS</li>
+        <li>css changes the spacing and the layout of text</li>
       </ul>
 
     </section>
